<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

   			<LinearLayout 
   			    android:layout_width="match_parent"
   			    android:layout_height="wrap_content"
   			    android:orientation="horizontal"
   			   >
   			     <TextView 
		        android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_horizontal"
				android:text="@string/speed"
				android:textSize="20dp"
		        />
		    <EditText
		        android:id="@+id/speed_data" 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center_horizontal"
		        android:text="@string/sp_data"
		        android:inputType="number"
		        />
		    <TextView 
		        android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
			    android:gravity="center_horizontal"
				android:text="@string/coded_disc"
				android:textSize="20dp"
		        />
		    <EditText
		        android:id="@+id/coded_disc_data" 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center_horizontal"
		        android:text="@string/cd_data"
		        android:inputType="number"
		        />	  
   			</LinearLayout>

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical"
	            android:orientation="horizontal" >

	            <Button
	                android:id="@+id/position_button"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="myonClick"
	                android:text="@string/position_car" />

	            <Button
	                android:id="@+id/qr_button"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="myonClick"
	                android:text="@string/qrtbtn" />

	            <Button
	                android:id="@+id/chief_status_button"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="myonClick"
	                android:text="@string/chief" />

	            <Button
	                android:id="@+id/chief_control_button"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="myonClick"
	                android:text="主车控制" />

	            <Button
	                android:id="@+id/qzd"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="myonClick"
	                android:text="全自动" />

	            <Button
	                android:id="@+id/tx"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="myonClick"
	                android:text="图形识别" />
	        </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" 
	        android:gravity="center_vertical"
	        >

	        <Button
	            android:id="@+id/cs1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" 
	            android:onClick="myonClick"
	            android:text="测试1"/>
			<Button
		        android:id="@+id/infrare_button" 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="红外"   
		        android:onClick="myonClick"/>
			<Button
		        android:id="@+id/zigbee_button" 
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="ZigBee"     
		        android:onClick="myonClick"/>
		          <Button
	            android:id="@+id/xj"
	             android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		          android:onClick="myonClick"
	            android:text="循迹" />
		            <Button
	            android:id="@+id/cp"
	             android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		          android:onClick="myonClick"
	            android:text="车牌识别" />
	    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

</LinearLayout>
    
	    <LinearLayout
	        android:layout_width="452dp"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|bottom"
	        android:orientation="horizontal" >

	        

	        <RelativeLayout
	            android:layout_width="262dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.44"
	            android:gravity="bottom" >

	            <ImageButton
	                android:id="@+id/up_button"
	                android:layout_width="60dp"
	                android:layout_height="40dp"
	                android:layout_centerHorizontal="true"
	                android:background="@drawable/up_button" />

	            <ImageButton
	                android:id="@+id/stop_button"
	                android:layout_width="40dp"
	                android:layout_height="40dp"
	                android:layout_below="@id/up_button"
	                android:layout_centerHorizontal="true"
	                android:background="@drawable/stop_button" />

	            <ImageButton
	                android:id="@+id/below_button"
	                android:layout_width="wrap_content"
	                android:layout_height="40dp"
	                android:layout_below="@id/stop_button"
	                android:layout_centerHorizontal="true"
	                android:background="@drawable/below_button" />

	            <ImageButton
	                android:id="@+id/right_button"
	                android:layout_width="40dp"
	                android:layout_height="50dp"
	                android:layout_alignBottom="@+id/stop_button"
	                android:layout_marginLeft="21dp"
	                android:layout_toRightOf="@+id/up_button"
	                android:background="@drawable/right_button" />

	            <ImageButton
	                android:id="@+id/left_button"
	                android:layout_width="40dp"
	                android:layout_height="50dp"
	                android:layout_alignBottom="@+id/stop_button"
	                android:layout_marginRight="21dp"
	                android:layout_toLeftOf="@+id/up_button"
	                android:background="@drawable/left_button" />
	            
	        </RelativeLayout>

	    </LinearLayout>

</LinearLayout>
